# Fern

./: .gitignore  CMakeLists.txt  README.md  analysis.py  main.pl
codegen/: codegen.cpp  codegen.h  codegen.pl  interface.cpp
docs/: grammar.txt  scratch.txt
examples/: currying.frn  example.txt  fibonacci.frn  heap_references.frn  passing_function.frn  stack_references.frn
parsing/: lexer.pl  parser.pl
runtime/: builtins.cpp  memory.cpp  std.cpp  std.types.frn
semantics/: imports.pl  typecheck.pl  typehandler.cpp  typehandler.h  types.pl
src/: Driver.cpp  Driver.h  errors.cpp  errors.h  globals.h  main.cpp
src/interpreter/: Interpreter.cpp  Interpreter.h
src/parser/: AST.cpp  AST.h  ASTPrinter.cpp  ASTPrinter.h  Driver.cpp  Driver.h  Fern.yy  Operator.cpp  Operator.h
src/runtime/: SymbolTable.cpp  SymbolTable.h  builtins.cpp  builtins.h  types.cpp  types.h
src/scanner/: Fern.flex++  Fern.lex  Fern.ll  Scanner.cpp  Scanner.h
tests/: test.frn  test.txt
